--- a/index.html
+++ b/index.html
@@ -359,30 +359,32 @@
               </button>
             </div>
           </div>
-          <div class="details-container color container">
-            <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 4"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Four</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
-              >
-                GitHub
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:okatoma14@gmail.com">okatoma14@gmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p>
+            <a href="https://www.linkedin.com/in/toma-okabayashi-9b99662b6/"
+              >LinkedIn</a
+            >
+          </p>
         </div>
       </div>
     </section>
