--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
@@ -63,21 +64,21 @@
           <img
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
-            class="icon"
+            class="icon link-icon"
             onclick="location.href='https://www.linkedin.com/in/toma-okabayashi-9b99662b6/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
-            class="icon"
+            class="icon link-icon"
             onclick="location.href='https://github.com/TomaOkabayashi'"
           />
         </div>
       </div>
     </section>
     <section id="about">
-      <p class="section__text__p1">Get to know more</p>
-      <h1 class="title">About me</h1>
+      <p class="section__text__p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
           <img
@@ -127,7 +128,7 @@
       />
     </section>
     <section id="experience">
-      <p class="section__text__p1">Explore my</p>
+      <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
@@ -137,7 +138,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -148,7 +149,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -159,7 +160,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -170,7 +171,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -181,7 +182,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -192,7 +193,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -203,7 +204,7 @@
               <!-- <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -219,7 +220,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -230,7 +231,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -241,7 +242,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -252,7 +253,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -263,7 +264,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Exeperience icon"
+                  alt="Experience icon"
                   class="icon"
                 />
                 <div>
@@ -287,7 +288,7 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-container color container">
+          <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-1.png"
@@ -301,7 +302,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
               >
-                GitHub
+                Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
@@ -311,7 +312,7 @@
               </button>
             </div>
           </div>
-          <div class="details-container color container">
+          <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-2.png"
@@ -323,19 +324,19 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
+                onclick="location.href='https://github.com/'"
               >
-                GitHub
+                Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
+                onclick="location.href='https://github.com/'"
               >
                 Sandbox
               </button>
             </div>
           </div>
-          <div class="details-container color container">
+          <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
@@ -347,13 +348,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
+                onclick="location.href='https://github.com/'"
               >
-                GitHub
+                Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
+                onclick="location.href='https://github.com/'"
               >
                 Live Demo
               </button>
@@ -361,6 +362,12 @@
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+      />
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -369,7 +376,7 @@
         <div class="contact-info-container">
           <img
             src="./assets/email.png"
-            alt="email icon"
+            alt="Email icon"
             class="icon contact-icon email-icon"
           />
           <p><a href="mailto:okatoma14@gmail.com">okatoma14@gmail.com</a></p>
