--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section__pic-container">
+      <!-- <div class="section__pic-container">
         <img
           src="./assets/profile-pic.png"
           alt="Toma Okabayashi profile picture"
         />
-      </div>
+      </div> -->
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Toma Okabayashi</h1>
@@ -80,23 +80,29 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
+        <!-- <div class="section__pic-container">
           <img
             src="./assets/about-pic.png"
             alt="Profile picture"
             class="about-pic"
+          />
+        </div> -->
+        <div class="section__pic-container">
+          <img
+            src="./assets/profile-pic.png"
+            alt="Toma Okabayashi profile picture"
           />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="./assets/education.png"
                 alt="Experience icon"
                 class="icon"
               />
-              <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <h3>Education</h3>
+              <p>Curtin University<br />Penultimate Year</p>
             </div>
             <div class="details-container">
               <img
@@ -105,17 +111,28 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelor's Degree <br />Second year/penultimate</p>
+              <p>Bachelor of Computing<br />Software Engineering Major</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              This is where i talk about myself and how i desperately need a job
-              bruuuuuuThis is where i talk about myself and how i desperately
-              need a job bruuuuuuThis is where i talk about myself and how i
-              desperately need a job bruuuuuuThis is where i talk about myself
-              and how i desperately need a job bruuuuuuThis is where i talk
-              about myself and how i desperately need a job bruuuuuu
+              Hello! I'm Toma Okabayashi, a versatile individual with a passion
+              for technology, sports, and continuous learning. <br />
+              <br />
+              My journey into tech began in primary school with a "game maker"
+              course, sparking my initial interest in programming. Although I
+              lost touch with coding until my final year of high school. Where I
+              rediscovered my passion, it was during my time as a Japanese
+              restaurant kitchen hand that I truly realized the transformative
+              power of technology. <br />
+              <br />
+              Organising digital transactions through Square and managing online
+              food delivery platforms such as Uber/DoorDash, seeing increased
+              revenue and better profit margins almost immediately, it reignited
+              my interest in programming. Leading me to pursue this career path.
+              Through my diverse experiences in tech and sports, I strive to
+              make a positive impact and inspire others. Let's connect and
+              explore exciting opportunities together!
             </p>
           </div>
         </div>
@@ -128,7 +145,7 @@
       />
     </section>
     <section id="experience">
-      <p class="section__text__p1">Explore My</p>
+      <p class="section__text__p1">Discover My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
@@ -197,8 +214,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>C &#20; &#20; &#20; &#20; &#20; &#20; &#20; &#20;</h3>
-                  <p>Basic</p>
+                  <h3>C</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <!-- <article>
@@ -284,32 +301,32 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
+      <p class="section__text__p1">Browse My</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
-                alt="Project 1"
+                src="./assets/project-3.png"
+                alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Shop Navigation</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
+                onclick="location.href='https://github.com/TomaOkabayashi/university-dataStrucAlgo-assignment-portfolio'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
+                onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
@@ -320,44 +337,44 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Sudoku Solver</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/TomaOkabayashi/java-sudoku-solver-portfolio-project'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Sandbox
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
-                alt="Project 3"
+                src="./assets/project-1.png"
+                alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Flappy Bird Java</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/TomaOkabayashi/flappy-bird-java-portfolio-project'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/TomaOkabayashi/html-css-js-portfolio'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
@@ -366,7 +383,7 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
+        onclick="location.href='./#contact'"
       />
     </section>
     <section id="contact">
